# crew_ai

./: .gitignore  README.md
Book_Writer_Crew_Revision/: pyproject.toml
Book_Writer_Crew_Revision/src/book_writer_crew_revision/: __init__.py  agents.py  main.py  tasks.py
Book_writer_Crew/: README.md  pyproject.toml
Book_writer_Crew/src/book_writer_crew/: Agents.py  Task.py  main.py
Core_Concepts/: .gitignore  README.md
Core_Concepts/01_Agents/: Calculator_Tool.py  README.md  main.py
Core_Concepts/02_Tasks/: README.md  Report.md  main.py
Core_Concepts/03_Crews/: README.md  main.py
Core_Concepts/04_Flows/: README.md  main.py  my_flow_plot.html
Crew_Ai_quickstart_example/: pyproject.toml  report.md
Crew_Ai_quickstart_example/src/latest_ai_development/: main.py
Trip_Planer_Crew/: pyproject.toml
Trip_Planer_Crew/src/Trip_Planner_Crew/: agents.py
last_class/: README.md  pyproject.toml  report.md
last_class/src/last_class/: crew.py  main.py
last_class/src/last_class/config/: agents.yaml  tasks.yaml
litellm1/: poem.txt  pyproject.toml
litellm1/src/litellm1/: main1.py
multiple_agents/: README.md  pyproject.toml
multiple_agents/src/multiple_agents/: main1.py
multiple_agents/src/multiple_agents/crews/devcrew/: dev_crew.py
multiple_agents/src/multiple_agents/crews/devcrew/config/: agents.yaml  tasks.yaml
project1/: pyproject.toml
project1/src/project1/: .env
