[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Khurramshahzad175", email = "khurramshahzad2440@gmail.com" }
]
requires-python = ">=3.12.8"
dependencies = [
    "crewai>=0.100.1",
    "crewai-tools>=0.33.0",
    "langchain>=0.3.17",
]

[project.scripts]
project1 = "Trip_Planner_Crew:main"
kickoff = "Trip_Planner_Crew.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
