[project]
name = "last_class"
version = "0.1.0"
description = "last_class using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
last_class = "last_class.main:run"
crew1= "last_class.main:run"
train = "last_class.main:train"
replay = "last_class.main:replay"
test = "last_class.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
